--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -62,12 +62,51 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform: rotate(90deg);
+      transform-origin: 100%;
+      transition: all 0.05s;
+    }
+    /* make the hour hand shorter */
+    .hour-hand{
+      position: absolute;
+      left: 20%; 
+      width: 30%;
+    }
+    .second-hand{
+      background-color: red;
+    }
+    .min-hand{
+      position: absolute;
+      left: 10%; 
+      width: 40%;
+      background-color: rgb(34, 34, 34);
     }
 
   </style>
 
   <script>
 
+    const secodHand = document.querySelector('.second-hand');
+    const minsHand = document.querySelector('.min-hand');
+    const hourHand = document.querySelector('.hour-hand');
+
+    setInterval(function(){
+      const date = new Date();
+
+      const second = date.getSeconds();
+      const secondsDegrees = ((second / 60) * 360) + 90;
+      console.log(secondsDegrees)
+      secodHand.style.transform = `rotate(${secondsDegrees}deg)`;
+
+      const minute = date.getMinutes();
+      const minuteDegrees = (minute/60) * 360 + 90
+      minsHand.style.transform = `rotate(${minuteDegrees}deg)`
+
+      const hour = date.getHours();
+      const houreDegrees = (hour/60) * 360 + 90
+      hourHand.style.transform = `rotate(${houreDegrees}deg)`
+    }, 1000);
+    
 
   </script>
 </body>
