--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -69,17 +69,18 @@
     /* make the hour hand shorter */
     .hour-hand{
       position: absolute;
-      left: 20%; 
-      width: 30%;
+      left: 23%; 
+      width: 27%;
     }
     .second-hand{
+      height: 5px;
       background-color: red;
     }
     .min-hand{
       position: absolute;
       left: 10%; 
       width: 40%;
-      background-color: rgb(34, 34, 34);
+      background-color: rgb(0, 1, 88);
     }
 
   </style>
