--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -9,13 +9,13 @@
 
   <div class="controls">
     <label for="spacing">Spacing:</label>
-    <input id="spacing" type="range" name="spacing" min="10" max="200" value="10" data-sizing="px">
+    <input id="spacing" type="range" name="space" min="10" max="200" value="10" data-sizing="px">
 
     <label for="blur">Blur:</label>
     <input id="blur" type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
 
     <label for="base">Base Color</label>
-    <input id="base" type="color" name="base" value="#ffc600">
+    <input id="base" type="color" name="base-color" value="#ffc600">
   </div>
 
   <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
@@ -25,6 +25,11 @@
     /*
       misc styles, nothing to do with CSS variables
     */
+    :root{
+      --space: 10px;
+      --blur: 10px;
+      --base-color: #ffc600;
+    }
 
     body {
       text-align: center;
@@ -42,9 +47,42 @@
     input {
       width: 100px;
     }
+
+    img{
+      padding: var(--space);
+      background: var(--base-color);
+      filter: blur(var(--blur));
+    }
+    .hl{
+      color: var(--base-color);
+    }
+
   </style>
 
   <script>
+    // const spacing = document.getElementById('spacing');
+    // const blur = document.getElementById('blur');
+    // const base = document.getElementById('base');
+
+    // best way is to select all the input attribute instead of selecting each input
+    const inputs = document.querySelectorAll('.controls input')
+  
+    inputs.forEach(input => input.addEventListener('input', function(event){
+      //console.log(event,this) same
+
+      //const suffix = this.dataset.sizing || '';
+      const suffix = (this.type === 'range') ? 'px' : ''; // use this instead of using the data-* to avoid hussle
+      
+      //console.log(this.name,this.value) show the name and value element 
+      document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
+      /*
+      Note:
+        make sure to set the name element of input attribute and the root variable name the same 
+        since we use the name element as reference to change the :root variable. 
+      */
+      
+    }));
+
   </script>
 
 </body>
