--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -18,29 +18,66 @@
     }
 
     // Regular
+    console.log("Hello");
 
     // Interpolated
+    const world = "World!"
+    console.log(`Hello, ${world}`);
 
     // Styled
+    console.log("%cHello, World!", "color: red; font-size: 24px");
 
     // warning!
+    console.warn("Warning!");
 
     // Error :|
+    console.error("Warning!");
 
     // Info
+    console.info('Info');
 
     // Testing
+    console.assert(1 === 2, "Wrong!") // only show if condition is false
 
     // clearing
+    console.clear();
 
     // Viewing DOM Elements
+    const p = document.querySelector('p');
+    console.log(p);
+    console.dir(p);
+
+    console.clear();
 
     // Grouping together
+    dogs.forEach(dog => {
+      console.group(dog.name);
+      console.log(dog.name+" is "+dog.age+" old");
+      console.groupEnd();
+    });
 
     // counting
+    console.count('one');
+    console.count('two');
+    console.count('two');
+    console.count('three');
+    console.count('three');
+    console.count('three');
+
+    // table
+    console.table(dogs)
 
     // timing
-
+    console.time("fetching data");
+    fetch('https://api.github.com/users/wesbos')
+      .then(data => data.json())
+      .then(data => {
+        console.timeEnd("fetching data");
+        console.log(data);
+      }
+    );
+    
+    
   </script>
 </body>
 </html>
