--- a/16 - Mouse Move Shadow/index-START.html
+++ b/16 - Mouse Move Shadow/index-START.html
@@ -35,6 +35,22 @@
   </style>
 
 <script>
+  const hero = document.querySelector('.hero');
+  const text = document.querySelector('h1');
+  const walk = 100; // 100px
+  const shadow = (e) => {
+  
+    const {offsetWidth: width, offsetHeight: height} = hero;
+    let { clientX: x, clientY : y} = e; 
+
+    const xWalk = Math.round((x / width * walk) - (walk / 2));
+    const yWalk = Math.round((y / height * walk) - (walk / 2));
+
+    text.style.textShadow = `${xWalk}px ${yWalk}px 0 red`;
+    
+  }
+  hero.addEventListener('mousemove', shadow)
+  
 </script>
 </body>
 </html>
