--- a/17 - Sort Without Articles/index-START.html
+++ b/17 - Sort Without Articles/index-START.html
@@ -46,9 +46,14 @@
   <ul id="bands"></ul>
 
 <script>
+
 const bands = ['The Plot in You', 'The Devil Wears Prada', 'Pierce the Veil', 'Norma Jean', 'The Bled', 'Say Anything', 'The Midway State', 'We Came as Romans', 'Counterparts', 'Oh, Sleeper', 'A Skylit Drive', 'Anywhere But Here', 'An Old Dog'];
-
-
+// remove the first word of the string if start with (The, An, A) 
+const strip = str => 'TheAn'.indexOf(str.trim().split(" ")[0]) === -1 ? str : str.trim().split(" ").slice(1).join(" ");   
+// sort ascending order
+const sortedBands = bands.sort((a,b) => (strip(a)) > strip(b));
+// populate the list
+document.querySelector('#bands').innerHTML = sortedBands.map(band => `<li>${band}</li>`).join("");
 </script>
 
 </body>
