--- a/20 - Speech Detection/index-START.html
+++ b/20 - Speech Detection/index-START.html
@@ -12,6 +12,32 @@
 <script>
   window.SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
 
+  const recognition = new SpeechRecognition();
+  recognition.interimResult = true; // recognize the speech immediately while speaking
+  
+  const words = document.querySelector('.words');
+  let p = document.createElement('p');
+  words.appendChild(p);
+
+  recognition.addEventListener('result', (e) => {
+    const transcript = Array.from(e.results)
+      .map(result => result[0])
+      .map(result => result.transcript)
+      .join('');
+      p.textContent = transcript;
+      if(e.results[0].isFinal){
+        p = document.createElement('p');
+        words.appendChild(p);
+      }
+
+      // commands
+      // if(transcript.includes('create new list')){
+      //   console.log('new list');
+      // }
+  });
+
+  recognition.addEventListener('end', recognition.start);
+  recognition.start();
 
 </script>
 
@@ -22,7 +48,7 @@
     }
 
     body {
-      background: #ffc600;
+      background: #222;
       font-family: 'helvetica neue';
       font-weight: 200;
       font-size: 20px;
